Fix H2 spacing

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -224,7 +224,7 @@ li {
         font-size: 1rem;
     }
 
-    h2 {
+    #summary > h2 {
         padding-top: 5vh;
     }
 
